--- a/digibank/src/assets/styles/main.scss
+++ b/digibank/src/assets/styles/main.scss
@@ -1,5 +1,7 @@
-@import 'base';
 @import 'login';
+@import 'cadastro';
+@import 'extrato';
+@import 'base';
 @import 'home';
 @import 'emprestimos';
 @import 'metas';
