--- a/digibank/src/assets/styles/main.scss
+++ b/digibank/src/assets/styles/main.scss
@@ -12,3 +12,4 @@
 @import './components/header&footer';
 @import './components/emprestimoOptions';
 @import './components/metaComponent';
+@import './components/modalMeta';
