--- a/digibank/src/assets/styles/main.scss
+++ b/digibank/src/assets/styles/main.scss
@@ -5,6 +5,7 @@
 @import 'home';
 @import 'emprestimos';
 @import 'metas';
+@import 'metaUnica';
 @import 'minhaArea';
 @import './components/sideBar';
 @import './components/userInfosComponent';
