--- a/digibank/src/assets/styles/components/_metaComponent.scss
+++ b/digibank/src/assets/styles/components/_metaComponent.scss
@@ -11,13 +11,65 @@
   @extend .column;
   justify-content: space-between;
   padding: 30px 35px;
-
+  
   width: 48%;
   height: 450px;
-
+  
   border: 3px solid $hover-background;
   border-radius: $button-radius;
+  transition: 0.4s ease;
+  text-decoration: none;
+  color: $text-dark-color;
 
+  &:hover{
+    
+    cursor: pointer;
+    transform: scale(1.01);
+  }
+
+  h2 {
+    font-weight: 400;
+    font-size: 1.75rem;
+    margin-bottom: 15px;
+    text-transform: capitalize;
+  }
+
+  .suport-infos {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    width: 100%;
+    height: 100%;
+    .spans-meta{
+      @extend .column
+    }
+    span{
+      text-align: center;
+      text-transform: capitalize;
+    }
+  }
+}
+.suport-metaUnica {
+  @extend .sombreado;
+  @extend .column;
+  justify-content: space-between;
+  padding: 30px 35px;
+  
+  width: 100%;
+  height: 28rem;
+  
+  border: 3px solid $hover-background;
+  border-radius: $button-radius;
+  transition: 0.4s ease;
+  text-decoration: none;
+  color: $text-dark-color;
+
+  &:hover{
+    
+    cursor: pointer;
+    transform: scale(1.01);
+  }
   h2 {
     font-weight: 400;
     font-size: 1.75rem;
