feat: add CreatecardModal, and Delete CurrentCad

--- a/digibank/src/assets/styles/components/_cardComponent.scss
+++ b/digibank/src/assets/styles/components/_cardComponent.scss
@@ -22,8 +22,15 @@
   @extend .sombreado;
 
   .logo-credit-card {
+    display: flex;
+    justify-content: space-between;
     width: 100%;
     height: 40%;
+
+    #lockIcon {
+      width: auto;
+      height: 100%;
+    }
 
     img {
       height: 60%;
@@ -34,9 +41,10 @@
   .info-credit-card {
     @extend .column;
 
+    justify-content: flex-end;
     gap: 5px;
     width: 100%;
-    height: 40%;
+    height: 60%;
 
     * {
       color: $text-bright-color;
@@ -94,11 +102,19 @@
       color: inherit;
     }
 
-    &::placeholder{
+    &::placeholder {
       color: $text-dark-color;
-      &:hover{
+      &:hover {
         color: aliceblue;
       }
     }
   }
+}
+
+#post-cartao-form {
+  @extend .column;
+
+  align-items: center;
+  gap: 20px;
+  min-width: 300px;
 }
