--- a/digibank/src/assets/styles/main.scss
+++ b/digibank/src/assets/styles/main.scss
@@ -15,3 +15,4 @@
 @import './components/metaComponent';
 @import './components/modalMeta';
 @import './components/modalTransferir';
+@import './components/empty';
