--- a/digibank/src/assets/styles/_emprestimos.scss
+++ b/digibank/src/assets/styles/_emprestimos.scss
@@ -1,5 +1,25 @@
 @import 'base';
 
+*::-webkit-scrollbar {
+  width: 0.7rem;
+  margin-left: 2rem;
+}
+
+*::-webkit-scrollbar-track {
+  background: $primary-color;
+
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #d9d9d9;
+  transition: 0.7s ease;
+  border-radius: 30px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #d9d9d9;
+}
+
 main#emprestimos {
   @extend .flex;
 
