--- a/digibank/src/assets/styles/main.scss
+++ b/digibank/src/assets/styles/main.scss
@@ -6,6 +6,7 @@
 @import 'emprestimos';
 @import 'metas';
 @import 'metaUnica';
+@import 'notFound';
 @import 'minhaArea';
 @import './components/sideBar';
 @import './components/userInfosComponent';
