feat: FixModalsClosures, Improved token validation system API

--- a/digibank/src/assets/styles/_base.scss
+++ b/digibank/src/assets/styles/_base.scss
@@ -89,3 +89,9 @@ h1 {
 .sombreado {
   box-shadow: 0 3px 7px 0px darken($hover-background, $amount: 10);
 }
+
+@media (max-width: 1200px) {
+  .container{
+    width: 92%;
+  }
+}
