--- a/digibank/src/assets/styles/components/_cardComponent.scss
+++ b/digibank/src/assets/styles/components/_cardComponent.scss
@@ -76,15 +76,13 @@
   .card-option {
     @extend .btnPressionavel;
 
-    max-height: 30%;
+    height: 30%;
 
     background-color: $text-bright-color;
     color: $secondary-color;
 
     border: 3px solid $hover-background;
     border-radius: $button-radius;
-
-    padding: 10px;
 
     font-weight: 500;
     font-size: 1rem;
@@ -107,6 +105,24 @@
       &:hover {
         color: aliceblue;
       }
+    }
+
+    button {
+      width: 100%;
+      height: 100%;
+      background-color: $text-bright-color;
+      color: $secondary-color;
+      font-weight: 500;
+      font-size: 1rem;
+      border: unset;
+      border-radius: $button-radius;
+      cursor: pointer;
+    }
+
+    button:hover {
+      transition: all linear 100ms;
+      background-color: $secondary-color;
+      color: $primary-color;
     }
   }
 }
