--- a/digibank/src/assets/styles/_base.scss
+++ b/digibank/src/assets/styles/_base.scss
@@ -62,13 +62,14 @@ h1 {
 .btnComponent {
   @extend .flex;
   justify-content: center;
-
-  width: 12rem;
+  // width: 12rem;
   height: 3.125rem;
+  padding: 0px 20px;
   border-radius: 10px;
   background-color: $secondary-color;
   color: $primary-color;
   text-transform: capitalize;
+  text-decoration: unset;
   font-size: 1rem;
   font-weight: 500;
   border: none;
@@ -78,6 +79,11 @@ h1 {
   &:active {
     transition: all 150ms;
     transform: scale(0.98);
+  }
+
+  &:disabled{
+    color: black !important;
+    background-color: $hover-background !important;
   }
 }
 
