--- a/digibank/src/assets/styles/_metaUnica.scss
+++ b/digibank/src/assets/styles/_metaUnica.scss
@@ -16,7 +16,7 @@ main#metaUnica {
         align-items: center;
         .supportButtons {
             @extend .column;
-            justify-content: space-between;
+            justify-content: space-around;
             padding: 1.8rem 2.2rem;
             width: 100%;
             height: 28rem;
