--- a/digibank/src/assets/styles/components/_modalTransferir.scss
+++ b/digibank/src/assets/styles/components/_modalTransferir.scss
@@ -18,6 +18,7 @@ $transition-time: 400ms;
   .left-modal-transferir {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     width: 0;
     height: 100%;
     gap: 70px;
