--- a/digibank/src/assets/styles/main.scss
+++ b/digibank/src/assets/styles/main.scss
@@ -6,7 +6,8 @@
 @import 'emprestimos';
 @import 'metas';
 @import 'metaUnica';
-@import 'notFound';
+@import 'erros';
+@import 'landing';
 @import 'minhaArea';
 @import './components/sideBar';
 @import './components/userInfosComponent';
