--- a/digibank/src/assets/styles/_base.scss
+++ b/digibank/src/assets/styles/_base.scss
@@ -110,7 +110,7 @@ h1 {
   align-items: center;
   justify-content: center;
 
-  background-color: transparent;
+  background-color: $primary-color;
   border: 3px solid #d9d9d9;
   border-radius: $button-radius;
 
